# plazy

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml  pythonpublish.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: index.rst
plazy/: __init__.py  coding.py  data.py  file.py  singleton.py  timer.py
tests/: test_auto_assign.py  test_base64.py  test_cloneable.py  test_is_number.py  test_list_files.py  test_random_string.py  test_read_txt.py  test_setattr_from_dict.py  test_time_tictoc.py  test_ts2dt_dt_2ts.py  test_unique.py  test_write_txt.py
